# pr-triage-prompt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-instructions.md
examples/: jira_VCOPS-75787.json  pr_23861.json  prompt_23861.md
src/pr_triage_prompt/: __init__.py  agent_instructions.py  checkout.py  chunk.py  cli.py  config.py  log.py  models.py  modules.py  prompt.py
src/pr_triage_prompt/analyzers/: __init__.py  base.py  java.py  patch.py  python.py  typescript.py
src/pr_triage_prompt/io/: __init__.py  batch.py  jira.py  pr.py
tests/: test_analyzer_fullfile.py  test_batch_cli.py  test_batch_discovery.py  test_budget.py  test_checkout.py  test_chunking.py  test_cli_report.py  test_cli_typo_guard.py  test_combined_prompt.py  test_config.py  test_footer_variants.py  test_git_auth.py  test_golden.py  test_io.py  test_java_analyzer.py  test_log.py  test_modules.py  test_patch_parser.py  test_prompt_scrub.py  test_python_analyzer.py  test_retrieval_keys.py  test_typescript_analyzer.py
